samples/_failures_safe/1761434285_db64ed_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1c8de1a7.c: In function ‘main’:
./samples/SAFE/__tmp_1c8de1a7.c:134:12: error: missing terminating " character
  134 |     printf("Enter 'END' on a separate line to finish input
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_1c8de1a7.c:134:5: error: expected expression at end of input
  134 |     printf("Enter 'END' on a separate line to finish input
      |     ^~~~~~
./samples/SAFE/__tmp_1c8de1a7.c:134:5: error: expected declaration or statement at end of input
